--- a/test-apps/css-styles/css-styles.html
+++ b/test-apps/css-styles/css-styles.html
@@ -17,13 +17,10 @@
 
 		<script>
 			window.onload = function() {
-				let rules = document.styleSheets[0].cssRules
-				for (var i = 0; i < rules.length; i++) {
-					if (rules[i].selectorText.startsWith('.')) {
-						var div = document.createElement('div')
-						div.className = rules[i].selectorText.split('.').join('')
-						document.body.appendChild(div)
-					}
+				for (var i = 0; i < 7; i++) {
+					var div = document.createElement('div')
+					div.className = "test" + i
+					document.body.appendChild(div)
 				}
 			}
 		</script>
